--- a/Styles/mediaquery.css
+++ b/Styles/mediaquery.css
@@ -16,6 +16,7 @@ Grandes telas: acima de 1200px
     }
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     div#imagem {
@@ -37,7 +38,8 @@ Grandes telas: acima de 1200px
     }
     
     section#login {
-        width: 950px ;
+        width: 950px;
+        height: 350px;
     }
 
     div#imagem {
