--- a/Styles/style.css
+++ b/Styles/style.css
@@ -30,14 +30,13 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.682);
-
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -46,7 +45,7 @@ div#imagem {
     display: block;
     background-image: url('../Images/predio.jpg');
     background-size: cover;
-    height: 250px;
+    height: 200px;
 }
 
 div#formulario {
@@ -61,4 +60,79 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #67d5d1f1;
+    border-radius: 8px;
+    font-size: 1em;
+    text-indent: 9px;
+    height: 100%;
+    width: calc(100% - 45px);
+    border: none;
+    transform: translateY(-12px);
+    
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
+}
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border-radius: 5px;
+    border: 0px;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2f6765;
+    cursor: pointer;
+}
+
+form > a.botao {
+    display: block;
+    width: 100%;
+    height: 40px;
+    text-decoration: none;
+    font-size: 1em;
+    text-align: center;
+    padding: 5px;
+    color: #3a7876;
+    border: 1px solid #3a7876;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover {
+    background-color: #52b6b38a;
+}
+
+form > a > i.material-icons {
+    font-size: 1em;
 }
